# majic-cpp

./: CMakeLists.txt
src/: debugstream.cpp  debugstream.hpp  file.cpp  file.hpp  io.hpp  main.cpp  majic.hpp  number.hpp  stream.cpp  stream.hpp  string.cpp  string.hpp
